<?xml version="1.0"?>
<package format="2">
  <name>fkie_behavior_tree_manager</name>
  <version>0.0.0</version>
  <description>The fkie_behavior_tree_manager package</description>

  <author email="francisco.garcia.rosas@fkie.fraunhofer.de">Francisco Garcia</author>
  <maintainer email="francisco.garcia.rosas@fkie.fraunhofer.de">Francisco Garcia</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>tf</depend>
  <depend>topic_tools</depend>
  <depend>tf2_ros</depend>
  <depend>fkie_behavior_tree_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
