<?xml version="1.0"?>
<package format="2">
  <name>fkie_behavior_trees</name>
  <version>0.0.0</version>
  <description>fkie_behavior_trees meta package</description>

  <author email="francisco.garcia.rosas@fkie.fraunhofer.de">Francisco Garcia</author>
  <maintainer email="francisco.garcia.rosas@fkie.fraunhofer.de">Francisco Garcia</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>fkie_behavior_tree_msgs</exec_depend>
  <exec_depend>fkie_behavior_tree_manager</exec_depend>
  <exec_depend>fkie_bt_move_base_actions</exec_depend>
  <exec_depend>fkie_bt_moveit_actions</exec_depend>
  <exec_depend>fkie_bt_tutorials</exec_depend>
  <exec_depend>fkie_bt_visualization</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
